[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pykylie"
dynamic = ["version"]
authors = [
  { name="Rich Townsend", email="rhtownsend@wisc.edu" },
]
description = "Python re-implementation of KYLIE pulsating-star spectral synthesis code"
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.15.0",
    "astropy>=5.3.2",
    "scipy>=1.11.1",
    "pymsg>=1.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.hatch.version]
path = "src/pykylie/__init__.py"
